--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
     "express": "^4.14.0",
     "express-session": "^1.14.1",
     "mongoose": "^4.6.3",
+    "morgan": "^1.7.0",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-twitter": "^1.0.4",
-    "socket.io": "^1.5.0"
+    "redis": "^2.6.2",
+    "socket.io": "^1.5.0",
+    "socket.io-redis": "^1.1.1",
+    "winston": "^2.2.0"
   }
 }
